# baby-vm

./: .gitignore  Makefile  README.md  meson.build  test_vm.c  vm.c  vm.h
tests/: test_template.c  test_vm_byte_2c_add.c  test_vm_byte_2c_subtract.c  test_vm_init.c  test_vm_memory_load.c  test_vm_memory_read_byte.c  test_vm_memory_read_word.c  test_vm_memory_write_byte.c  test_vm_op_add.c  test_vm_op_jcm.c  test_vm_op_jmp.c  test_vm_op_ld.c  test_vm_op_lw.c  test_vm_op_sub.c  test_vm_program_counter_add.c  test_vm_reset.c  test_vm_word_2c_add.c  test_vm_word_2c_subtract.c  test_vm_word_add.c  test_vm_word_subtract.c  test_word_t_add.c  test_word_t_subtract.c
