project ('baby-vm', 'c')

test ('template', executable ('test0', 'tests/test_template.c', 'vm.c'))
test ('word_t_add', executable ('test1', 'tests/test_word_t_add.c', 'vm.c'))
test ('word_t_subtract', executable ('test2', 'tests/test_word_t_subtract.c', 'vm.c'))
test ('vm_reset', executable ('test3', 'tests/test_vm_reset.c', 'vm.c'))
test ('vm_memory_load', executable ('test4', 'tests/test_vm_memory_load.c', 'vm.c'))
test ('vm_memory_read_byte', executable ('test5', 'tests/test_vm_memory_read_byte.c', 'vm.c'))
test ('vm_memory_write_byte', executable ('test6', 'tests/test_vm_memory_write_byte.c', 'vm.c'))
test ('vm_memory_read_word', executable ('test7', 'tests/test_vm_memory_read_word.c', 'vm.c'))
test ('vm_program_counter_add', executable ('test8', 'tests/test_vm_program_counter_add.c', 'vm.c'))
test ('vm_op_ld', executable ('test9', 'tests/test_vm_op_ld.c', 'vm.c'))
test ('vm_op_lw', executable ('test10', 'tests/test_vm_op_lw.c', 'vm.c'))
test ('vm_op_add', executable ('test11', 'tests/test_vm_op_add.c', 'vm.c'))
test ('vm_op_sub', executable ('test12', 'tests/test_vm_op_sub.c', 'vm.c'))
