project ('baby-vm', 'c')

test ('template', executable ('test0', 'tests/test_template.c', 'vm.c'))
test ('vm_word_add', executable ('test1', 'tests/test_vm_word_add.c', 'vm.c'))
test ('vm_word_subtract', executable ('test2', 'tests/test_vm_word_subtract.c', 'vm.c'))
test ('vm_init', executable ('test3', 'tests/test_vm_init.c', 'vm.c'))
test ('vm_memory_load', executable ('test4', 'tests/test_vm_memory_load.c', 'vm.c'))

